[project]
name = "pytest-freezeblaster"
version = "2.0.0"
description = "Wrap tests with fixtures in freeze_time"
readme = "README.md"
authors = [
    { name = "Jakub Jantosik", email = "jakub.jantosik@gmail.com" }
]
requires-python = ">=3.11"
classifiers = ["Framework :: Pytest"]
dependencies = [
    "freezeblaster==0.1.0",
    "pytest>=6.2.5",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 120

target-version = "py311"

[project.entry-points.pytest11]
freezeblaster = "pytest_freezeblaster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
