[project]
name = "pytest-freezeblaster"
version = "2.0.2"
description = "Wrap tests with fixtures in freeze_time"
readme = "README.md"
authors = [
    { name = "Jakub Jantosik", email = "jakub.jantosik@gmail.com" }
]
requires-python = ">=3.10"
classifiers = ["Framework :: Pytest"]
dependencies = [
    "freezeblaster==0.2.0",
    "pytest>=6.2.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pydantic>=2.10.6",
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 120

target-version = "py311"

[project.entry-points.pytest11]
freezeblaster = "pytest_freezeblaster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
